--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   },
   "dependencies": {
     "bpmn-js": "^0.18.0",
+    "bpmn-js-properties-panel": "^0.11.1",
+    "camunda-bpmn-moddle": "^0.9.1",
     "diagram-js": "^0.18.0",
     "inherits": "^2.0.1",
     "lodash": "^3.10.1",
