--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
   "devDependencies": {
     "browserify": "^13.0.0",
     "chai": "^3.2.0",
+    "brfs": "^1.2.0",
     "grunt": "~0.4.4",
-    "grunt-browserify": "^4.0.0",
+    "grunt-browserify": "^5.0.0",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-connect": "~0.11.2",
-    "grunt-contrib-copy": "~0.8.1",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-connect": "~1.0.2",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-watch": "~1.0.0",
     "grunt-karma": "^1.0.0",
     "karma": "^0.13.0",
     "karma-browserify": "^5.0.1",
@@ -65,6 +67,7 @@
     "diagram-js": "^0.18.0",
     "inherits": "^2.0.1",
     "lodash": "^3.10.1",
+    "jquery": "^2.1.1",
     "tiny-svg": "^0.1.0"
   }
 }
