--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "inherits": "^2.0.1",
     "lodash": "^3.10.1",
     "jquery": "^2.1.1",
-    "tiny-svg": "^0.1.0"
+    "tiny-svg": "^0.1.0",
+    "jsedn" : "^0.4.0"
   }
 }
