Enable to remoting to control-bus.

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "jquery": "^2.1.1",
     "tiny-svg": "^0.1.0",
     "jsedn": "^0.4.0",
-    "edn":"git://github.com/josh/js-edn.git"
+    "edn":"https://github.com/josh/js-edn.git"
   },
   "bugs": {
     "url": "https://github.com/bpmn-io/bpmn-js-examples/issues"
